# building-models

./: .gitignore  AGENTS.md  CLAUDE.md  OAT-organizing-all-thoughts-on-building-models.md  getting_back_on_the_horse.md  promising-findings.md
eywa/buddy-eywa/: 01-vision.md  02-subgraph-types.md  03-buddy-loop.md  04-workers-slots.md  05-artifacts.md  06-learning-surfaces.md  07-relation-to-current.md  08-implementation-plan.md  09-evaluation-and-open-questions.md  PRIMER-FOR-NEXT-SESSION.md  README.md  pyproject.toml
eywa/buddy-eywa/examples/: plan-3review-consolidate.md  plan-delegate-sequential-with-pivot.md  research-execute-consolidate.md
eywa/buddy-eywa/eywa-system/contracts/: README.md  artifact-record-contract.md  buddy-node-authored-response-contract.md  node-output-contract.md  node-packet-contract.md  node-record-contract.md  run-packet-contract.md  subgraph-instance-contract.md  subgraph-type-contract.md  worker-node-authored-response-contract.md
eywa/buddy-eywa/eywa-system/runtime/buddy_eywa_runtime/: __init__.py
eywa/buddy-eywa/sticky-notes/daily-journals/2026-04-07/: section-1-doc-update-h-02-subgraph-types-notes.md  section-1-doc-update-i-03-buddy-loop-notes.md  section-1-doc-update-j-04-workers-slots-notes.md  (+5 more)
other_projects/Open_Brush_AI/: .env.example  .gitignore  README.md  features_to_build.md  pyproject.toml
other_projects/Open_Brush_AI/demos/: __init__.py  abstract.py  hello_world.py  landscape.py
other_projects/Open_Brush_AI/open_brush_ai/: __init__.py  __main__.py  client.py  config.py  models.py  painter.py  styles.py
(+58424 files in other folders)
