[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buddy_eywa_runtime"
version = "0.0.1"
description = "Runtime package for buddy-eywa, a standalone reimplementation of super-eywa."
requires-python = ">=3.9"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["eywa-system/runtime/buddy_eywa_runtime"]

[tool.hatch.build.targets.wheel.sources]
"eywa-system/runtime/buddy_eywa_runtime" = "buddy_eywa_runtime"
